2007-09-18  Michael Smith <msmith@fluendo.com>

	* flumotion/admin/admin.py:
	  Don't emit disconnected from the admin model unless we actually
	  managed to connect first.

2007-09-14  Andy Wingo  <wingo@pobox.com>

	* flumotion/test/test_component.py (PipelineTest.connect_feeders):
	Stub out.

	* flumotion/manager/component.py
	(ComponentAvatar.perspective_feedReady)
	(ComponentAvatar.perspective_error): Remove unused remote methods.
	
	* flumotion/component/padmonitor.py (EaterPadMonitor.__init__)
	(EaterPadMonitor.setInactive): Changes to fix the FeedComponent
	reconnectEater problem.

	* flumotion/component/component.py (BaseComponent): Remove signal
	stuff, as I had meant to do before.

	* flumotion/component/producers/playlist/playlist.py
	(PlaylistProducer.create_pipeline): 
	* flumotion/component/feedcomponent.py
	(ParseLaunchComponent.create_pipeline): Don't connect_feeders, the
	base class will do this.

	* flumotion/component/feedcomponent010.py (FeedComponent.init):
	New instance var, _clock_slaved. Will be used later.
	(FeedComponent.do_setup): Set _clock_slaved to True if we should
	expect to slave our clock to another one. Call connect_feeders()
	on the pipeline instead of expecting create_pipeline() to do so.
	(FeedComponent.stop_pipeline): Rename from pipeline_stop.
	(FeedComponent.cleanup): It's stop_pipeline now.
	(FeedComponent.do_start): Fix bug in eater pad monitors whereby it
	would call back with the fdsrc name, not the eater alias.
	(FeedComponent.feedToFD): Clean up the fd in an error case.

	* flumotion/component/consumers/httpstreamer/http.py
	(MultifdSinkStreamer)
	(MultifdSinkStreamer._client_removed_handler): 
	* flumotion/component/consumers/httpstreamer/resources.py
	(HTTPStreamingResource.__init__)
	(HTTPStreamingResource.clientRemoved): 
	* flumotion/component/feedcomponent.py
	(FeedComponentMedium.__init__):
	* flumotion/component/feedcomponent010.py
	(FeedComponent.__signals): Remove signals from components, which